--- a/main.css
+++ b/main.css
@@ -18,6 +18,7 @@ a{
 p{
     width: 80%;
     word-break: break-all;
+    text-align: center;
 }
 
 input{
@@ -27,4 +28,13 @@ input{
     color: #460C68;
     border-color: #94bbe9;
     font-family: "Courier New";
+}
+
+hr{
+    height: 3%;
+    width: auto;
+    border: 5px solid #460C68;
+    border-radius: 40px;
+    margin: auto;
+    margin-top: 10px;
 }
