--- a/sandbox/css/style1.css
+++ b/sandbox/css/style1.css
@@ -1,6 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=ZCOOL+QingKe+HuangYou&family=ZCOOL+XiaoWei&display=swap');
 body{
     margin: 0;
     padding: 0;
+    font-family: 'ZCOOL XiaoWei';
 }
 
 h1{
@@ -9,7 +11,7 @@ h1{
 }
 
 a{
-    margin: 0;
+    margin: 0 0 0 3vw;
     padding: 0;
     text-decoration: none;
     color: black;
