--- a/sandbox/css/style6.css
+++ b/sandbox/css/style6.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa&display=swap');
+
 body{
     margin: 0;
 }
@@ -22,7 +24,7 @@ body{
     /* CENTERING */
     margin: auto;
     position: relative;
-    top: 20dvh;
+    top: 30dvh;
 
     /* POSITION */
     z-index: 100;
@@ -38,6 +40,9 @@ body{
     
     /* COLOR */
     background-color: blueviolet;
+
+    /* CENTERING */
+    text-align: center;
 }
 
 #square1{
@@ -167,4 +172,39 @@ body{
     /* BORDER */
     border-left: 0.6dvh solid black;
     border-top: 0.6dvh solid black;
+}
+
+#info-display{
+    /* POSITION */
+    position: relative;
+    bottom: 20dvh;
+
+    /* COLORS */
+    border: 0.6dvh grey solid;
+    background-color: crimson;
+
+    /* MARGIN */
+    margin: 0;
+    height: 15dvh;
+
+    /* CENTERING */
+    text-align: center;
+}
+
+#info-display-text{
+    /* CENTERING VERTICALLY */
+    position: relative;
+    top: 3.75dvh;
+
+    /* FONT */
+    font-family: Comfortaa;
+}
+
+.img-token{
+    /* POSITION */
+    z-index: 10000;
+
+    /* DIMENSIONS */
+    height: 19dvh;
+    width: 19dvh;
 }
