--- a/TinDog/css/styles.css
+++ b/TinDog/css/styles.css
@@ -1,9 +1,13 @@
 /* Fonts: Ubuntu & Montserrat*/
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css");
+
+
 #title{
     background-color: #FF4C68;
     padding: 3% 15% 0 15%;
+    overflow: hidden;
 }
 
 #main-title{
@@ -11,4 +15,34 @@
     font-size: 3rem;
     line-height: 1.5;
     font-weight: 900;
+}
+
+#iphone-mockup{
+    transform: rotate(15deg);
+    object-fit: contain;
+}
+
+.navbar-brand{
+    font-family: Ubuntu;
+    font-size: 2rem;
+}
+
+button{
+    margin: 1.5%;
+}
+
+#features{
+    padding: 10% 15% 10% 15%;
+    font-family: Montserrat;
+    font-weight: 700;
+}
+
+.feature-title{
+    font-size: 1.5rem;
+    text-align: center;
+}
+
+.feature-text{
+    font-size: 0.9rem;
+    color: #8f8f8f;
 }
