--- a/sass_proy3/sass/layouts/_button-4.sass
+++ b/sass_proy3/sass/layouts/_button-4.sass
@@ -6,5 +6,13 @@
 
     // The inner shadow.
     box-shadow: inset 0 -8px 0 0 rgba(0, 0, 0, 0.2)
-    text-shadow: 8px rgba(0, 0, 0, 0.2)
-    
+    text-shadow: 0 3px rgba(0, 0, 0, 0.2)
+
+.button-4:hover
+    // Reduce Shadow
+    box-shadow: inset 0 -6px 0 0 rgba(0, 0, 0, 0.2)
+
+.button-4:active
+    // Reduce Shadow
+    box-shadow: inset 0 -2px 0 0 rgba(0, 0, 0, 0.2)
+    text-shadow: 0 1.5px rgba(0, 0, 0, 0.2)
