--- a/sass_proy3/sass/layouts/_button-3.sass
+++ b/sass_proy3/sass/layouts/_button-3.sass
@@ -2,4 +2,4 @@
 @use '../utils'
 
 .button-3
-    @include sliderButton.slider-button(utils.$cyan, up)
+    @include sliderButton.slider-button(utils.$cyan, full)
