--- a/sass_proy3/sass/layouts/_button-2.sass
+++ b/sass_proy3/sass/layouts/_button-2.sass
@@ -2,4 +2,4 @@
 @use '../utils'
 
 .button-2
-    @include sliderButton.slider-button(utils.$red, right)
+    @include sliderButton.slider-button(black, left)
